feat: add tests to createPost endpoint